2016-05-11  Titus Brown  <titus@idyll.org>

   * scripts/trim-low-abund.py: refactor to use generators; add --diginorm
   option to include digital normalization in trim-low-abund functionality.
   * tests/test_script_output.py: added md5sum hashing tests to pin down
   functionality in trim-low-abund.py and normalize-by-median.py; verified
   that refactoring does not alter existing functionality.
   * tests/test-data/simple-genome-reads.fa: supporting file for md5sum
   tests.
   * tests/test-data/README.rst: a new README for describing test files,
   how to generate them, and their uses.
   * tests/test_scripts.py: added additional tests for trim-low-abund.py
   functionality and error cases.

2016-05-11  Titus Brown  <titus@idyll.org>

   * tests/test_read_parsers.py: fixed syntax error introduced by previous
   merge.

2016-05-08  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * scripts/{do-partition,partition-graph}.py,oxli/partition.py: pulled up
   duplicate `worker` partition function into a reusable place.

2016-05-08  Michael R. Crusoe  <michael.crusoe@gmail.com>

   * .dictionary, pylintrc:  added `pylint` configuration that checks spelling
   in Python files. Added dictionary of project specific words.
   * khmer/__init__.py, scripts/readstats.py, setup.py: Fixed typos.
   * Makefile: line-wrapped; bumped up `pep8` version; beefed up `cppcheck`
   target to correctly list the defines and includes for the current platform
   which eliminates false positives; `*.pyc` files are now cleaned from the
   `sandbox` as well as the `dist` directory. Added `cppcheck-long` target to
   also examine the seqan headers. Fed the dynamically constucted list of
   includes to Doxygen. Added simultaneous OS X, Debian, and Ubuntu
   compatibility to many targets. Added helper target to print the value of
   any variable via `make print-VARNAME`. Fixed the `make coverage-report`
   target. pep257 is now called pydocstyle